[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sagittal_average"
version = "0.1.0"
description = "A Python package for calculating sagittal averages."
authors = [
    {name = "Your Name", email = "your_email@example.com"}
]
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["."]